plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.144'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenCentral()
    maven {
        name = 'CurseMaven'
        url = "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        // GeckoLib
        name = 'GeckoLib'
        url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup "com.geckolib"
        }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/main/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources.setSrcDirs(['src/main/resources'])

sourceSets.main.java.exclude(
        'com/raishxn/ufo/datagen/DataGenerators.java',
        'com/raishxn/ufo/datagen/ModBlockStateProvider.java',
        'com/raishxn/ufo/datagen/ModBlockTagProvider.java',
        'com/raishxn/ufo/datagen/ModFluidTagProvider.java',
        'com/raishxn/ufo/datagen/ModItemModelProvider.java',
        'com/raishxn/ufo/datagen/ModItemTagProvider.java',
        'com/raishxn/ufo/datagen/DMARecipeBuilder.java',
        'com/raishxn/ufo/datagen/ModRecipeProvider.java',
        'com/raishxn/ufo/datagen/StellarSimulationRecipeBuilder.java',
        'com/raishxn/ufo/datagen/UniversalMultiblockRecipeBuilder.java',
        'com/raishxn/ufo/item/custom/ThermalResistorExosuitItem.java',
        'com/raishxn/ufo/mixin/AccessorBuiltInModelHooks.java',
        'com/raishxn/ufo/mixin/MixinModelBakery.java',
        'com/raishxn/ufo/mixin/MixinMEStorageScreen.java',
        'com/raishxn/ufo/util/ModItemProperties.java',
        'com/raishxn/ufo/screen/QuantumPatternHatchLockReason.java'
        ,'com/raishxn/ufo/client/render/FluidTankRenderer.java'
        ,'com/raishxn/ufo/client/tutorial/screen/UfoTutorialScreen.java'
        ,'com/raishxn/ufo/compat/jei/**'
        ,'com/raishxn/ufo/compat/appflux/**'
        ,'com/raishxn/ufo/screen/*Screen.java'
        ,'com/raishxn/ufo/registry/RegistryHandler.java'
)

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "org.appliedenergistics:appliedenergistics2:${ae2_version}"
    implementation "io.github.pedroksl:ae2addonlib:${ae2addonlib_version}"
    implementation "org.appliedenergistics:guideme:${guideme_version}"
    implementation "com.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"

    // for api access
    compileOnly "curse.maven:kubejs-238086:${kubejs_file_id}"
    compileOnly "curse.maven:rhino-416294:${rhino_file_id}"

    // dev test mods
    localRuntime "com.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url = "file://${project.projectDir}/repo"
        }
    }
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll('-Xlint:deprecation', '-Xlint:unchecked')
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

def syncReleaseResources = tasks.register('syncReleaseResources', Sync) {
    dependsOn generateModMetadata
    from('src/main/resources')
    from(generateModMetadata)
    into layout.buildDirectory.dir('resources/main')
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('jar').configure {
    dependsOn syncReleaseResources
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
}
}
